# gst-fbdev2-plugins

./: .gitignore  AUTHORS  README  README.md  configure.ac
src/: Makefile.am  gstdrmsink.c  gstdrmsink.h  gstfbdev2sink.c  gstfbdev2sink.h  gstfbdevframebuffersink.c  gstfbdevframebuffersink.h  gstframebuffersink.c  gstframebuffersink.h  gstsunxifbsink.c  gstsunxifbsink.h
